# Projet-CPP-Robot

./: CMakeLists.txt  README.md  main.cpp
calibration/: camera_params.yml
include/: ArucoDetector.h  BehaviorManager.h  Camera.h  ExplorationAlgorithm.h  KeyboardControl.h  LiDAR.h  OccupancyGrid.h  PathPlanner.h  Robot.h  Visualizer.h  WallFollower.h
src/: ArucoDetector.cpp  BehaviorManager.cpp  Camera.cpp  ExplorationAlgorithm.cpp  KeyboardControl.cpp  LiDAR.cpp  OccupancyGrid.cpp  PathPlanner.cpp  Robot.cpp  Visualizer.cpp  WallFollower.cpp
